--- a/docs-v1.html
+++ b/docs-v1.html
@@ -7,19 +7,19 @@
     <style type="text/css">
       body {
 	font-family: Trebuchet MS, sans-serif;
-	font-size: 12px;
+	font-size: 15px;
 	color: #444;
 	margin-right: 24px;
 }
 
 h1	{
-	font-size: 20px;
+	font-size: 25px;
 }
 h2	{
-	font-size: 18px;
+	font-size: 20px;
 }
 h3	{
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: bold;
 }
 hr	{
@@ -76,7 +76,7 @@ pre.post {
 }
 
 pre.put {
-  background-color: #c5862b
+  background-color: #c5862b;
 }
 
 pre.delete {
